recipes-extended/iptables/falcon/comex/iptables.rules
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A POSTROUTING -j MASQUERADE
-A POSTROUTING -j MASQUERADE
COMMIT

*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

## loopback and LAN bridge
-A INPUT -i lo -j ACCEPT
-A INPUT -d 127.0.0.1 -j ACCEPT
-A INPUT -i br-lan -j ACCEPT

## ACCEPT already ESTABLISHED connections
## '-m state' was deprecated in favor of '-m conntrack'
#-A INPUT -p ALL -i eth0 -m state --state ESTABLISHED,RELATED -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

## Drop ICMP redirect messages
-A INPUT -p icmp --icmp-type redirect -j DROP

## ACCEPT ICMP from anywhere and SSH from LAN bridge
-A INPUT -p icmp -j ACCEPT
-A INPUT -p tcp -i br-lan --dport 22 -m state --state NEW -j ACCEPT

## special rejections
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable

## NAT
-A FORWARD -i br-lan -o eth0 -m state --state NEW -j ACCEPT
# '-m state' was deprecated in favor of '-m conntrack'
#-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

COMMIT
